--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+
 .App {
   
   width: 60%;
@@ -24,39 +26,54 @@ left: 5px;bottom: 4px;
   border-radius: 10px;
   margin: auto;
   text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: "Roboto", sans-serif;
 
+}
+.iframeDV>h1{
+  color: #707C8B;
 }
 .iframeDV>p
 {
-color:  black;
-font-size: 18px;
+  color: #707C8B;
 text-align: center;
-font-size: 16px;
+font-size: 20px;
 }
 
-.btn{
-border-radius: 10px;
-padding: 5px 5px;
-
-}
-.blackBtn
+.activeBtn
 {
-background-color: black;
-color: white;
-font-weight: bold;
-border: 4px solid black;
-
-
+  background-color: #5ED0C0;
+  color: white;
 }
-.whiteBtn
+.inactiveBtn
 {
-background-color: white;
-color: black;
+  background-color: #4C5D72;
+  color: #9DA6B1;
 }
+.btn
+{
+  padding: 10px 25px;
+  cursor: pointer;
+  font-size: .9em;
+  border: none;
+  outline: none;
+  display: inline-block;
+  text-decoration: none;
+}
+.leftBtn {
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  font-size: .9em;
+}
+.rightBtn {
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  font-size: .9em;
+}
+
+
 #root
 {
-  background-image: linear-gradient(190deg, #0a0a1f 40%, #347aeb 100%);
+  background-color: #2E4158;
   overflow: hidden;
   min-height: 100vh;
   
