--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,7 @@ font-size: 20px;
 }
 
 .container{
-  height: 500px;
+  height: 65vh;
   text-align: center;
   margin-top: 10px;
   border-radius: 20px;
@@ -172,14 +172,26 @@ display: inline-block;
 }
 @media (max-width:750px) {
   .iframeDV>iframe {
-      width: 250px;
-      height: 250px;
+
+      width: 70vw;
+      height: 50vh;
     
+  }
+  #root
+  {
+    text-align: center;
+  }
+  .App
+  {
+    width: 80%;
   }
 
   .container{
-    max-width: 100%;
-    height: 350px;
+    min-width: 90%;
+   min-height: 300px;
+   height: 70vh;
+
+    
   }
 }
 
